# anamnesis-classifier

./: .gitignore  Dockerfile  README.md  conftest.py  pyproject.toml  requirements-train.txt  requirements.txt
.github/workflows/: ci.yml
data/: label_mapping.json
reports/: tfidf_baseline_dev.txt
scripts/: export_mapping.py  run_tfidf_baseline.py
src/: data.py  mapping.py  metrics.py  preprocess.py
src/models/: tfidf_baseline.py
tests/: test_mapping.py
