[project]
name = "anamnesis-classifier"
version = "0.1.0"
description = "Классификация анамнезов МКБ-10 в группы фитнес-ограничений"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
